<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_dialog"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDialogTitle"
        style="@style/Base.DialogWindowTitle.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_redeem_title"
        tools:text="@string/dialog_redeem_title" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_redeem_description" />

    <SeekBar
        android:id="@+id/seekbarAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:thumbTint="@color/colorPrimary"
        tools:max="10" />

    <TextView
        android:id="@+id/tvRedeemAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:text="@string/dialog_redeem_redeem_amount" />

    <TextView
        android:id="@+id/tvTotalDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:text="@string/dialog_redeem_total_discount" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/AppTheme.OmiseGOOutlineButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/dialog_redeem_button_cancel" />

        <Button
            android:id="@+id/btnRedeem"
            style="@style/AppTheme.OmiseGOButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/dialog_redeem_button_redeem" />
    </LinearLayout>


</LinearLayout>