<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_dialog"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDialogTitle"
        style="@style/OMGTextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_confirmation_title"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        tools:text="@string/dialog_confirmation_title" />

    <TextView
        android:id="@+id/tvDescription"
        style="@style/OMGTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_confirmation_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReject"
            style="@style/AppTheme.OmiseGORedButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/dialog_confirmation_button_reject" />

        <Button
            android:id="@+id/btnApprove"
            style="@style/AppTheme.OmiseGOButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/dialog_confirmation_button_approve" />
    </LinearLayout>


</LinearLayout>