<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.omisego.omgshop.pages.checkout.CheckoutActivity">

    <include layout="@layout/toolbar" />


    <TextView
        android:id="@+id/tvSection1Title"
        style="@style/AppTheme.SectionHeader"
        android:text="@string/activity_checkout_section_1_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivProductDetailLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_photo_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvProductTitle"
                style="@style/OMGTextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                tools:text="OmiseGO T-Shirt" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvPrice"
                style="@style/OMGTextMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:text="฿985.00" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvSection2Title"
        style="@style/AppTheme.SectionHeader"
        android:text="@string/activity_checkout_section_2_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <TextView
            style="@style/OMGTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_checkout_sub_total"
            android:textColor="@color/colorBlack" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvSubtotal"
            style="@style/OMGTextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="฿985.00"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <TextView
            style="@style/OMGTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_checkout_discount"
            android:textColor="@color/colorBlack" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvDiscount"
            style="@style/OMGTextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="฿0.00"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <TextView
            style="@style/OMGTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_checkout_total"
            android:textColor="@color/colorBlack" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvTotal"
            style="@style/OMGTextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="฿985.00"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        style="@style/OMGTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/activity_checkout_note" />

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRedeem"
            style="@style/OutlineButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/activity_checkout_button_redeem" />

        <Button
            android:id="@+id/btnPay"
            style="@style/BlueButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/activity_checkout_button_pay" />
    </LinearLayout>

</LinearLayout>
