<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="co.omisego.omgshop.pages.register.RegisterActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:src="@drawable/omisego" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etFirstName"
                    style="@style/OMGTextNormal"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/activity_register_first_name"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:maxLines="1"
                    app:backgroundTint="@color/colorGray" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etLastName"
                    style="@style/OMGTextNormal"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/activity_register_last_name"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:maxLines="1"
                    app:backgroundTint="@color/colorGray" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/OMGTextNormal"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/activity_register_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:maxLines="1"
                    app:backgroundTint="@color/colorGray" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/OMGTextNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_register_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword|textNoSuggestions"
                    android:maxLines="1"
                    app:backgroundTint="@color/colorGray" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnRegister"
                style="@style/BlueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/activity_register_register" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>